Several changes in Design

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -24,6 +24,8 @@ header > :nth-child(-n + 2) {
 header .header-logo {
     font-size: 3rem;
     color: #fff;
+    display: flex;
+    align-items: center;
 }
 
 header .nav-trigger {
