--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,9 +2,7 @@
     border-left: 2px solid #fff;
     border-top: 2px solid #fff;
     color: #000;
-
-    /* linear-gradient(135deg, rgba(28, 112, 137, 0.75), rgba(5, 42, 61, 0.5)) */
-    background: linear-gradient(135deg, rgba(237, 245, 255, 0.75) 0%, rgba(176, 212, 253, 0.5) 33%, rgba(28, 112, 137, 0.95) 33%, rgba(5, 42, 61, 0.75) 66%, rgba(237, 245, 255, 0.75) 66%, rgba(176, 212, 253, 0.5) 100%);
+    background: linear-gradient(135deg, rgba(237, 245, 255, 0.75) 0%, rgba(176, 212, 253, 0.5) 33%, var(--blueDark) 33%, var(--blueLight) 66%, rgba(237, 245, 255, 0.75) 66%, rgba(176, 212, 253, 0.5) 100%);
     background-size: 340%;
     background-position: left;
     padding: 1rem 2rem;
@@ -22,6 +20,7 @@
 .button.hoverIn {
     transform: scale(101%);
     background-position: center;
+    color: var(--accentOrange);
 }
 
 .button.hoverOut {
