div. Änderungen an den Styles

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -4,6 +4,10 @@
     align-items: center;
     justify-content: center;
     grid-column: span 12;
+    background-size: "cover";
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 } 
 
 #hero .content {
