--- a/src/styles/kontakt.css
+++ b/src/styles/kontakt.css
@@ -1,3 +1,8 @@
+#kontakt {
+    background: linear-gradient(90deg, rgb(237,237,237), rgb(242,242,242)) ;
+    margin-top: 0;
+}
+
 
 input[type="submit"] {
     border: none;
