--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,3 +1,7 @@
+#about {
+    background: linear-gradient(90deg, rgb(237,237,237), rgb(242,242,242));
+    margin-bottom: 0;
+}
 
 .about-wrapper {
     grid-column: 2/12;
@@ -14,4 +18,10 @@
     float: left;
     margin: 0 1rem 0.5rem 0;
     clip-path: polygon(0 0, 100% 0, 100% 75%, 75% 80%, 50% 90%, 0 90%);
+}
+
+#about #hero {
+    height: 30dvh;
+    background-position: top;
+    background-attachment: scroll;
 }
